fixed overflowing nav items for now, needs responsive nav

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -64,6 +64,8 @@ h3 {
 
 .main-nav {
     text-align: right;
+    max-height: 105px;
+    overflow: hidden;
 
     ul,
     li {
